cambios y mejoras en funcionamient